trunk/Archive2/73/b3c79d89f5bde4/output
main.cpp:10:9: error: stray '\342' in program
         a = a – 0.1;
         ^
main.cpp:10:9: error: stray '\200' in program
main.cpp:10:9: error: stray '\223' in program
main.cpp: In function 'int main()':
main.cpp:10:19: error: expected ';' before numeric constant
         a = a – 0.1;
                   ^
